package edu.hitsz.aircraft;

/**
 * @author 一徐
 */
public interface Observer {
    /**
     * 观察者回应变化
     */
    void response();
}
